# TestWin3D

./: Cargo.toml  README.md
src/: basestate.rs  basetoggles.rs  camera.rs  fps_timer.rs  input_handle.rs  main.rs  shader.rs  shaders.rs  transform.rs
src/autoMesh/: auto_cube.rs  auto_mesh.rs  auto_plane.rs  mod.rs
